# brainrot-metadata_campaigns

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  run_brainrot.py
assets/: brainrot_gif_arsenal.md  cursed_emoji_arsenal.json  thumbnail_prompt_factory.txt
campaigns/archive/: README.md
campaigns/templates/: aztec_sacrifice_template.json  base_brainrot_campaign.json
data/: tribute_counter.json
data/keywords/: brainrot_lexicon.json
docs/: CONTRIBUTING_CHAOS.md  MANIFESTO.md  PHILOSOPHICAL_BRAINROT.md
src/analyzers/: __init__.py  intelligent_brainrot_analyzer.py  live_trend_sniffer.py
src/generators/: 5150_patient_metadata_generator.py  __init__.py  brainrot_generator.py  guest_666_obby_generator.py  smart_metadata_generator.py
templates/: DEATHMATCH_ARENA.md  reels_x_brainrot_template.json  reels_x_maximum_brainrot.json  reels_x_safe_corporate.json  tiktok_brainrot_template.json  tiktok_maximum_brainrot.json  tiktok_metadata.json  tiktok_safe_corporate.json  youtube_brainrot_template.json  youtube_maximum_brainrot.json  youtube_safe_corporate.json
