[project]
name = "brainrot-metadata-campaigns"
version = "666.0.1"
description = "We don't make the videos. We make the algorithm cry."
authors = [{name = "bRaiNRoTRePoRt666X", email = "joker@ohio.gov"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Chaos Public License v666"}

dependencies = [
    "rich>=13.0",      # pretty printing for the pretty lies
    "httpx>=0.27",     # sniffing trends before they breathe
    "pydantic>=2.0",   # structured brainrot
]

[project.scripts]
brainrot = "src.generators.brainrot_generator:main"
